Ajout d'une liste à puce présentant les fichiers présents dans le repository

--- a/git.html
+++ b/git.html
@@ -8,5 +8,11 @@
 	<body>
 		<h1>Mon projet Git</h1>
 		<p>Bienvenue sur mon projet Git.</p>
+		<p>Les trois fichiers présents dans le repository sont :</p>
+		<ul>
+			<li>README.md</li>
+			<li>git.html</li>
+			<li>style.html</li>
+		</ul>
 	</body>
 </html>
